--- a/style.css
+++ b/style.css
@@ -24,3 +24,15 @@ header nav ul li a:hover{
 header img{
 	height: 100%;
 }
+section#noticias`{
+   width: 1100px;
+    height: auto;
+    margin:0
+    border: 1px solid black;
+}
+section#noticias ul li{
+    list-style: none;
+     width: 350px;
+     height: 350px;
+     background: gray;
+}
