--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ header nav ul li a:hover{
 header img{
 	height: 100%;
 }
-section#noticias`{
+section#noticias{
    width: 1100px;
     height: auto;
     margin:0
@@ -36,3 +36,24 @@ section#noticias ul li{
      height: 350px;
      background: gray;
 }
+section#notcia img{
+  text-align: center;
+  width: 75%;
+  height: 50px;
+  box-shadow: 5px 0px 0px 0px #00000030;
+}
+section#noticia .categoria{
+  text-align: center;
+}
+section#noticia h2{
+  font-size: 35px;
+  color: #333333;
+  text-align: center;
+}
+section#noticia h3{
+  text-align: center;
+  font-size: 35px;
+  font-family: Arial;
+  margin: 25px 0;
+  text-margin: uppercase;
+} 
