--- a/style.css
+++ b/style.css
@@ -1,59 +1,109 @@
-*{margin: 0; padding: 0}
+*{margin: 0; padding:0}
 header{
-       height: 150px;
-       display: flex;
-       aling-items:center;
-       justify-content: space-arround;
-       border: 1px solid black;
-
+	height: 150px;
+	display: flex;
+	align-items: center;
+	justify-content: space-around;
+	border: 1px solid black;
 }
-header nav{
-       display: flex;
+header nav ul{
+	display: flex;
 }
 header nav ul li{
-       list-style:none;
-       margin: 10px;
+	list-style:none;
+	margin: 10px;
 }
 header nav ul li a{
-        text-decoration:none;
-        color: #333;
+	text-decoration: none;
+	color: #333;
 }
 header nav ul li a:hover{
-       color: yellow;
+	color: yellow;
 }
 header img{
 	height: 100%;
 }
+section#banner{
+	height: 350px;
+	background: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT_82pLSvlAaa4cCeMp7KNJEH7j8UmplyBIUQ&s");
+	background-repeat: no-repeat;
+	background-position: center center;
+	background-size: 100%;
+}
 section#noticias{
-   width: 1100px;
-    height: auto;
-    margin:0
-    border: 1px solid black;
+	width: 1100px;
+	height: auto;
+	margin: 0 auto;
+}
+section#noticias ul{
+	display: flex;
+	flex-wrap:wrap;
 }
 section#noticias ul li{
-    list-style: none;
-     width: 350px;
-     height: 350px;
-     background: gray;
+	list-style:none;
+	width: 350px;
+	height: 350px;
+	margin: 5px;
 }
-section#notcia img{
-  text-align: center;
-  width: 75%;
-  height: 50px;
-  box-shadow: 5px 0px 0px 0px #00000030;
+section#noticias img{
+	text-align: center;
+	height: 150px;
+	width: 100%;
 }
-section#noticia .categoria{
-  text-align: center;
+section#noticias .categoria{
+	text-align: center;
+	background: #900;
+	color: #fff;
+	display: block;
+	padding: 5px 0;
 }
-section#noticia h2{
-  font-size: 35px;
-  color: #333333;
-  text-align: center;
+section#noticias h2{
+	font-size: 35px;
+	color: #333333;
+	text-align: center;
 }
-section#noticia h3{
-  text-align: center;
-  font-size: 35px;
-  font-family: Arial;
-  margin: 25px 0;
-  text-margin: uppercase;
-} 
+section#noticias h3{
+	text-align: center;	
+	font-size: 35px;
+	font-family: Arial;
+	margin: 25px 0;
+	text-transform: uppercase;
+}
+
+section#noticias ul li a{
+	text-align: center;
+	font-size: 19px;
+	color: white;
+	background: red;
+	display: block;
+	padding: 5px 0;
+}
+section#noticias ul li a:hover{
+	background: blue;
+}
+section#noticias ul li p{
+	text-align: center;
+	margin: 15px 0;
+}
+section#projetos ul{
+	display:flex;
+	width: 1100px;
+	margin: 0 auto;
+}
+section#projetos ul li{
+	overflow: hidden;
+	height: 450px;
+	border: 1px solid black;
+	margin: 10px;
+	position: relative;
+     border-radius: 30px;
+}
+section#projetos ul li img{
+
+}
+section#projetos ul li h3{
+	position: absolute;
+	bottom: 30px;
+     background: blue;
+     padding: 10px;
+}
