--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@ section#projetos ul li{
 	border: 1px solid black;
 	margin: 10px;
 	position: relative;
-     border-radius: 30px;
+     border-radius: 30px;s
 }
 section#projetos ul li img{
 
